--- a/config/base/params.env
+++ b/config/base/params.env
@@ -1,2 +1,2 @@
-monitoring-namespace=opendatahub
-odh-model-controller=quay.io/opendatahub/odh-model-controller:fast
+monitoring-namespace=
+odh-model-controller=quay.io/opendatahub/odh-model-controller:pr-132
