--- a/config/base/params.env
+++ b/config/base/params.env
@@ -1,4 +1,4 @@
-odh-model-controller=quay.io/opendatahub/odh-model-controller:fast
+odh-model-controller=quay.io/opendatahub/odh-model-controller:pr-210
 caikit-tgis-image=quay.io/opendatahub/caikit-tgis-serving:fast
 tgis-image=quay.io/opendatahub/text-generation-inference:fast
 ovms-image=quay.io/opendatahub/openvino_model_server:fast
