Add Power/z runtime template
Signed-off-by: Vaibhav Jain <vajain@redhat.com>

--- a/config/runtimes/kustomization.yaml
+++ b/config/runtimes/kustomization.yaml
@@ -13,5 +13,8 @@ resources:
   - vllm-multinode-template.yaml
   - vllm-rocm-template.yaml
   - vllm-gaudi-template.yaml
+  - vllm-spyre-template.yaml
+  - vllm-ppc64le-template.yaml
+  - vllm-s390x-template.yaml
   - caikit-standalone-template.yaml
   - hf-detector-template.yaml
