--- a/config/base/kustomization.yaml
+++ b/config/base/kustomization.yaml
@@ -10,6 +10,9 @@ configMapGenerator:
       - params-cuda.env
       - params-vllm-rocm.env
       - params-vllm-gaudi.env
+      - params-vllm-spyre.env
+      - params-vllm-ppc64le.env
+      - params-vllm-s390x.env
       - params-guardrails-hf-runtime.env
     name: odh-model-controller-parameters
 generatorOptions:
@@ -113,6 +116,39 @@ replacements:
       - select:
           kind: Template
           name: vllm-gaudi-runtime-template
+        fieldPaths:
+          - objects.0.spec.containers.0.image
+  - source:
+      kind: ConfigMap
+      version: v1
+      name: odh-model-controller-parameters
+      fieldPath: data.vllm-spyre-image
+    targets:
+      - select:
+          kind: Template
+          name: vllm-spyre-runtime-template
+        fieldPaths:
+          - objects.0.spec.containers.0.image
+  - source:
+      kind: ConfigMap
+      version: v1
+      name: odh-model-controller-parameters
+      fieldPath: data.vllm-ppc64le-image
+    targets:
+      - select:
+          kind: Template
+          name: vllm-ppc64le-runtime-template
+        fieldPaths:
+          - objects.0.spec.containers.0.image
+  - source:
+      kind: ConfigMap
+      version: v1
+      name: odh-model-controller-parameters
+      fieldPath: data.vllm-s390x-image
+    targets:
+      - select:
+          kind: Template
+          name: vllm-s390x-runtime-template
         fieldPaths:
           - objects.0.spec.containers.0.image
   - source:
